[tool.poetry]
name = "wechat-robot"
version = "0.1.0"
description = ""
authors = ["Li0329 <haxk1024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
htmlparser = ">=0.0.2"
pyqrcode = ">=1.2.1"
qrcode = ">=7.4.2"
requests = ">=2.28.2"
chardet = ">=5.1.0"
pillow = "^10.3.0"
pre-commit = "^3.7.1"
web-py = "^0.62"
linkai = ">=0.0.6.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
